# TrigaMirror

./: .gitignore  CMakeLists.txt  README.md
include/: TrigaMirror.h
resources/: trigamirror-EXEMPLE.conf  trigamirror.conf  trigamirror.service  trigamirror@.service
src/: TrigaMirror.cpp  main.cpp
